[project]
name = "openweather-mcp-server"
version = "0.1.0"
description = "A Model Context Protocol (MCP) server that provides weather information using the OpenWeather API with LangChain integrations"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "fastmcp>=2.12.0",
    "langchain-anthropic>=0.3.19",
    "langchain-aws>=0.2.31",
    "langchain-mcp-adapters>=0.1.9",
    "langgraph>=0.6.6",
    "requests>=2.32.5",
]